--- a/Brigade meadows/Brigade_project/Brigade meadows/events.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/events.html
@@ -552,16 +552,20 @@
     <li class="nav-item"><a href="about.html">About</a></li>
     <li class="nav-item"><a href="amenities.html">Amenities</a></li>
     <li class="nav-item"><a href="events.html">Events</a></li>
-    <li class="nav-item dropdown">
-      <a href="#">Policy <i class="fas fa-chevron-down text-xs ml-1"></i></a>
+    <li class="dropdown">
+      <a href="#" class="dropbtn">Policy <i class="fa fa-chevron-down"></i></a>
       <ul class="dropdown-menu">
-        <li><a href="#">SOPs</a></li>
-        <li><a href="pet.html">Pet Policy</a></li>
-        <li><a href="#">Downloads</a></li>
+          <li><a href="security-policy.html">Security Policies</a></li>
+          <li><a href="interior-guidelines.html">Interior Work</a></li>
+          <li><a href="housekeeping.html">Housekeeping & Waste</a></li>
+          <li><a href="pet-policy.html">Pet Policy</a></li>
+          <li><a href="party-hall.html">Party Hall</a></li>
+          <li><a href="swimming-pool.html">Swimming Pool</a></li>
+          <li><a href="gym-guidelines.html">Gym</a></li>
+          <li><a href="play-area.html">Children's Play Area</a></li>
+          <li><a href="penalties.html">Rule Violation & Penalty</a></li>
+          <li><a href="move.html">Move-In / Move-Out</a></li>
       </ul>
-    </li>
-    <li class="nav-item"><a href="#">Contact</a></li>
-  </ul>
 </nav>
 
 <!-- New Section: Smart Conf Carousel -->
@@ -686,24 +690,35 @@
 </section>
 
 <!-- Footer -->
-<footer class="site-footer">
-  <div class="footer-links">
-    <a href="index.html">Home</a> |
-    <a href="about.html">About</a> |
-    <a href="amenities.html">Amenities</a> |
-    <a href="events.html">Events</a> |
-    <a href="pet.html">Pet Policy</a>
-  </div>
-  <div class="footer-social">
-    <a href="#"><i class="fab fa-facebook-f"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin-in"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-  </div>
-  <div>© 2025 Brigade Meadows Phase-1. All rights reserved.</div>
-</footer>
+<footer class="footer">
+  <div class="footer-grid">
+    <div class="footer-section">
+      <div class="footer-brand">BRIGADE MEADOWS</div>
+      <p>A thriving community designed for modern living.</p>
+    </div>
 
-<!-- Scripts -->
+    <div class="footer-section">
+      <h4>Quick Links</h4>
+      <ul class="footer-list">
+        <li><a href="main.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="ameneties.html">Amenities</a></li>
+        <li><a href="events.html">Events</a></li>
+        <li><a href="contacts.html">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="footer-section">
+      <h4>Contact Us</h4>
+      <p>123 Brigade Road, Bangalore, India</p>
+      <p>+91 98765 43210</p>
+      <p>info@brigademeadows.com</p>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    &copy; 2023 Brigade Meadows. All rights reserved.
+  </div>
+</footer>
+<!-- Footer End -->
 <script>
   // Updated JavaScript to use consistent IDs for hamburger menu and nav links
   const hamburgerMenu = document.getElementById('hamburgerMenu');
