--- a/Brigade meadows/Brigade_project/Brigade meadows/pool.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/pool.html
@@ -279,73 +279,108 @@
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
-<div class="fullscreen-image">
-    <div class="overlay"></div>
-
-    <!-- Navbar -->
-    <nav class="navbar">
-        <a href="index.html" class="logo"><i class="fa-solid fa-building"></i> BRIGADE MEADOWS</a>
-        <button class="mobile-menu" id="mobile-menu-btn"><i class="fa fa-bars"></i></button>
+    <nav class="navbar" data-aos="fade-down">
+        <a href="main.html" class="logo"><i class="fa-solid fa-shield-alt"></i> BRIGADE MEADOWS</a>
+        <button class="mobile-menu" id="mobile-menu-btn" aria-label="Open Menu"><i class="fa fa-bars"></i></button>
         <ul class="nav-links" id="nav-links">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="main.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="amenities.html">Amenities</a></li>
             <li><a href="events.html">Events</a></li>
-            <li><a href="pet.html">Pet Policy</a></li>
-            <li><a href="admin/" id="admin-link" style="display: none;">Admin</a></li>
-        </ul>
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Policy <i class="fa fa-chevron-down"></i></a>
+                <ul class="dropdown-menu">
+                    <li><a href="security-policy.html">Security Policies</a></li>
+                    <li><a href="interior-guidelines.html">Interior Work</a></li>
+                    <li><a href="housekeeping.html">Housekeeping & Waste</a></li>
+                    <li><a href="pet.html">Pet Policy</a></li>
+                    <li><a href="party.html">Party Hall</a></li>
+                    <li><a href="pool.html">Swimming Pool</a></li>
+                    <li><a href="gym.html">Gym</a></li>
+                    <li><a href="play.html">Children's Play Area</a></li>
+                    <li><a href="penalties.html">Rule Violation & Penalty</a></li>
+                    <li><a href="move.html">Move-In / Move-Out</a></li>
+                </ul>
+            </li>
+        </nav>
     </nav>
+</head>
 
-    <!-- Center Content -->
-    <div class="hero-content">
-        <div class="about-heading">About Us</div>
-        <div class="arrow-down"><i class="fas fa-arrow-down"></i></div>
-    </div>
+<h1>Swimming Pool Guidelines</h1>
+
+    <p>Welcome to our swimming pool! To ensure a safe, hygienic, and enjoyable experience for all patrons, please adhere to the following comprehensive guidelines. Your cooperation helps us maintain a pristine and secure environment for everyone.</p>
+
+    <h2>Maintenance Schedule</h2>
+    <p>Please note the following times when the pool will be closed for essential maintenance:</p>
+    <ul>
+        <li><strong>All Mondays:</strong> The swimming pool will be completely closed for comprehensive maintenance, including deep cleaning and chemical balancing, for the entire day.</li>
+        <li><strong>Tuesdays, Wednesdays, Thursdays, Saturdays, & Sundays:</strong> The pool will be closed for routine maintenance and cleaning from 08:00 AM to 09:00 AM. This daily closure ensures water quality and facility readiness for the day.</li>
+        <li><strong>All Fridays:</strong> The pool will have an extended maintenance closure from 06:00 AM to 10:00 AM. This allows for more extensive cleaning and system checks.</li>
+    </ul>
+    <p>We appreciate your understanding and cooperation during these necessary maintenance periods. Please plan your visits accordingly.</p>
+
+    <h2>General Rules & Safety</h2>
+    <ol>
+        <li><strong>Compliance & Safety:</strong>
+            <p><strong>Details:</strong> For your safety and the safety of others, all users must promptly and respectfully follow any instructions or directives given by the pool attendant or designated staff members. In the event of an emergency, please strictly observe all posted emergency procedures and follow staff guidance immediately. This includes evacuation routes and assembly points.</p>
+        </li>
+        <li><strong>No Running:</strong>
+            <p><strong>Details:</strong> The pool deck and surrounding areas can be wet and slippery. To prevent accidents, falls, and potential injuries, all patrons are required to walk calmly and carefully, not run, anywhere within the pool facility, including changing rooms and walkways.</p>
+        </li>
+        <li><strong>Supervision of Children:</strong>
+            <p><strong>Details:</strong> Children aged [Specify an age, e.g., 14] and under must always be actively accompanied and supervised by a responsible parent or guardian (who must be at least [Specify an age, e.g., 18] years old) within the pool and deck area. "Actively supervised" means being within arm's reach for non-swimmers and constantly observing children who can swim. Guardians are solely responsible for the safety and behavior of their children.</p>
+        </li>
+        <li><strong>Hygiene & Cleanliness:</strong>
+            <p><strong>Details:</strong> Maintaining strict personal hygiene is crucial for the health and cleanliness of the pool water for all users. Spitting, spouting water from the mouth, or blowing the nose into the pool water is strictly prohibited. Please use the designated restrooms and toilets for all such needs before and during your visit.</p>
+        </li>
+        <li><strong>Proper Attire:</strong>
+            <p><strong>Details:</strong> Appropriate swimming attire is mandatory for all individuals entering the pool water. This helps maintain water quality and ensures a safe swimming environment.</p>
+            <ul>
+                <li><strong>Gents:</strong> Only proper swimming trunks or swim shorts made of swimwear material (e.g., polyester, nylon, spandex) are allowed. Loose or cotton clothing is not permitted as it can absorb water, become heavy, and clog filtration systems.</li>
+                <li><strong>Ladies:</strong> Only proper swimsuits or swimwear (e.g., one-piece, two-piece, full-body swimwear designed for swimming) are allowed.</li>
+                <li><strong>Prohibited:</strong> Casual clothing such as jeans, t-shirts, cut-offs, underwear, or street clothes are strictly prohibited in the pool. Swim caps are highly recommended, especially for individuals with long hair, to maintain hygiene and prevent hair from interfering with pool filtration.</li>
+            </ul>
+        </li>
+        <li><strong>No Pets:</strong>
+            <p><strong>Details:</strong> For health and safety reasons, pets and other animals are strictly not allowed anywhere within the pool area or changing facilities. Service animals may be permitted in designated areas outside the immediate pool deck; please consult with the pool attendant for guidance.</p>
+        </li>
+        <li><strong>Prohibited Substances:</strong>
+            <p><strong>Details:</strong> For the safety of all patrons, individuals who are visibly under the influence of alcohol, narcotics, or any other impairing substances will be denied entry to, or asked to leave, the pool area immediately. Impaired judgment can lead to serious accidents.</p>
+        </li>
+        <li><strong>Food & Beverages:</strong>
+            <p><strong>Details:</strong> To maintain cleanliness and prevent contamination, food, beverages (including non-alcoholic drinks), and alcoholic drinks are strictly not permitted within the immediate pool area (on the deck or in the water). Please consume all food and drinks in designated eating areas, if available.</p>
+        </li>
+        <li><strong>Floatation Devices:</strong>
+            <p><strong>Details:</strong> The use of personal floatation devices (such as inflatable tubes, arm floats, kickboards, or large rafts) must be explicitly approved by the pool attendant on duty. This is to ensure they do not impede other swimmers or create safety hazards, especially during busy periods. Life jackets approved by a recognized safety standard (e.g., ISI mark in India) are generally permitted for non-swimmers, but must be properly fitted.</p>
+        </li>
+        <li><strong>Sunscreen & Showering:</strong>
+            <p><strong>Details:</strong> While patrons are encouraged to use sunscreen for sun protection, it is mandatory to take a thorough shower with soap and water before entering the pool. This helps rinse off excess sunscreen, lotions, oils, and perspiration, which can react with pool chemicals and affect water quality. A quick rinse is also recommended after prolonged sun exposure or after reapplying sunscreen.</p>
+        </li>
+        <li><strong>Health Restrictions:</strong>
+            <p><strong>Details:</strong> To prevent the spread of infections and ensure the health of all swimmers, persons with open wounds, cuts, sores, bandages, or any signs of infectious ailments (e.g., skin rashes, fever, diarrhea, severe cough/cold, eye infections) are strictly prohibited from entering the pool. If you are feeling unwell, please refrain from using the pool.</p>
+        </li>
+        <li><strong>Declaration of Swimming Ability:</strong>
+            <p><strong>Details:</strong> For your safety and to assist the pool attendant in managing the pool effectively, all patrons, particularly children and less experienced swimmers, are required to inform the pool attendant of their swimming ability, experience, and skill level upon entry or request. This helps ensure appropriate supervision and guidance.</p>
+        </li>
+        <li><strong>Avoid Distracting Security:</strong>
+            <p><strong>Details:</strong> Security guards and pool attendants are on duty to ensure the safety and well-being of all patrons. Engaging them in unnecessary conversations or distracting them from their duties is strictly prohibited, as it can compromise their ability to monitor the pool area effectively and respond to emergencies.</p>
+        </li>
+        <li><strong>Restricted Areas:</strong>
+            <p><strong>Details:</strong> For safety and cleanliness, sunbathing, sitting, or lounging directly IN the pool's edge or on the lane ropes is not permitted. Please use designated seating areas or the pool deck for relaxation. This also helps prevent accidental falls into the water and keeps the immediate pool edge clear for swimmers entering and exiting.</p>
+        </li>
+        <li><strong>Enforcement of Rules:</strong>
+            <p><strong>Details:</strong> The pool staff has the authority to enforce all rules and regulations. Users found to be in violation of any of these guidelines may be asked to leave the pool and pool area immediately, without a refund. Repeat offenders may have their pool privileges suspended or revoked.</p>
+        </li>
+    </ol>
+
+    <h2>Ladies Batch Timings</h2>
+    <p><strong>Details:</strong> Dedicated swimming time for ladies is available on all days from 3:30 PM to 5:50 PM, with the exception of Mondays when the pool is closed for maintenance. During these hours, the pool is exclusively reserved for female patrons.</p>
+</body></div>
+<div class="pdf-download-container">
+    <a href="assets/SOP%2025-03-2025%20EC-6.pdf" download class="sop-button"><i class="fa fa-download"></i> Download Full Guidelines PDF</a>
 </div>
-<section class="about-fullscreen">
-    <div class="overlay">
-        <div class="about-content" id="about-section">
-            <div class="about-heading-box">
-                <h2>ABOUT BRIGADE MEADOWS</h2>
-            </div>
-            <p>
-                Brigade Meadows is not just a residential community — it's a lifestyle destination that blends greenery, modern infrastructure, and community-focused living. With thoughtfully designed amenities and a commitment to sustainability, we aim to provide an environment that supports healthy, secure, and fulfilling urban life for all residents.
-            </p>
-        </div>
-    </div>
-</section>
-<section class="water-conservation-section">
-    <div class="content-wrapper">
-        <!-- Adjusted text color for the subheading for better contrast -->
-        <p class="text-gray-400 text-lg font-light mb-2">Preserving our most vital resource</p>
-        <!-- Adjusted tracking for the main heading to match image's kerning -->
-        <h1 class="text-5xl md:text-6xl tracking-normal leading-tight mb-8">Water Conservation</h1>
+</div>
 
-        <!-- Adjusted text color and line height for paragraphs -->
-        <p class="text-gray-300 text-lg md:text-xl leading-snug mb-6">
-            At our core, we are dedicated to pioneering sustainable water management practices. We believe in
-            redefining how water is used, treated, and conserved, setting new benchmarks for environmental
-            responsibility and addressing the critical challenges of water scarcity globally.
-        </p>
-
-        <p class="text-gray-300 text-lg md:text-xl leading-snug mb-8">
-            Our commitment extends to implementing advanced wastewater treatment systems and promoting water-efficient
-            technologies across all our operations. We strive to educate and empower communities and stakeholders
-            to embrace water-saving habits, fostering a collective endeavor towards a greener future.
-        </p>
-
-        <a href="#" class="read-more-link mb-6">
-            <span>READ MORE</span>
-            <span class="text-2xl">→</span>
-        </a>
-
-        <a href="assets/Water_Conservation_Presentation.pptx.pdf" download="Our_Water_Strategy.pdf" class="download-button">
-            OUR WATER STRATEGY
-        </a>
-    </div>
-</section>
-
-<!-- Footer -->
 <footer class="footer">
     <div class="footer-grid">
       <div class="footer-section">
