for alpha testing

--- a/Brigade meadows/Brigade_project/Brigade meadows/main.html
+++ b/Brigade meadows/Brigade_project/Brigade meadows/main.html
@@ -601,7 +601,7 @@
         <div class="carousel-section section-1" data-image="https://placehold.co/1920x1080/e56a1b/FFFFFF?text=Commuter+Helmet">
             <div class="section-content">
                 <div class="text-column">
-                    <p>Move around your city safely and comfortably, while reducing your carbon footprint and helping to keep the air we breathe clean.</p>
+                    <p>Pet feeding areas for dogs and cats arount the community of Brigade Meadows</p>
                     <div class="pagination-container">
                         <div class="pagination-numbers" id="paginationNumbers1">
                             <span class="active" data-index="0">01</span>
@@ -613,8 +613,8 @@
                             <div class="pagination-progress" id="paginationProgress1"></div>
                         </div>
                     </div>
-                    <div class="product-category">COMMUTER HELMET</div>
-                    <h2 class="product-title">Perfect for urban riders</h2>
+                    <div class="product-category">Information</div>
+                    <h2 class="product-title">Pet Feeding Areas</h2>
                 </div>
                 <div class="image-column">
                     <!-- Removed main-image-container -->
@@ -639,8 +639,8 @@
                             <div class="pagination-progress" id="paginationProgress2"></div>
                         </div>
                     </div>
-                    <div class="product-category">CARGO BIKE</div>
-                    <h2 class="product-title">Your new urban companion</h2>
+                    <div class="product-category">ANNOUNCEMENT</div>
+                    <h2 class="product-title">Fire Brigade Drill</h2>
                 </div>
                 <div class="image-column">
                     <!-- Removed main-image-container -->
@@ -665,8 +665,8 @@
                             <div class="pagination-progress" id="paginationProgress3"></div>
                         </div>
                     </div>
-                    <div class="product-category">SMART LOCK</div>
-                    <h2 class="product-title">Ultimate bike security</h2>
+                    <div class="product-category">EVENT</div>
+                    <h2 class="product-title">Diwali Celebration</h2>
                 </div>
                 <div class="image-column">
                     <!-- Removed main-image-container -->
@@ -691,8 +691,8 @@
                             <div class="pagination-progress" id="paginationProgress4"></div>
                         </div>
                     </div>
-                    <div class="product-category">ACCESSORIES</div>
-                    <h2 class="product-title">Gear up for the road</h2>
+                    <div class="product-category">EVENT</div>
+                    <h2 class="product-title">Yoga Day</h2>
                 </div>
                 <div class="image-column">
                     <!-- Removed main-image-container -->
@@ -751,11 +751,11 @@
         </div>
         <div class="faq-item">
             <div class="faq-question">
-                What is your refund policy?
+                What are the Standard of Procedures (SOPs)?
                 <i class="fas fa-plus icon"></i>
             </div>
             <div class="faq-answer">
-                <p>Our refund policy allows returns within 30 days of purchase, provided the product is in its original condition. Some exclusions may apply. Please refer to our full refund policy on our website for complete details.</p>
+                <p>Our SOPs allows for a smooth operations throughout the community, to keep it peaceful and organized. Please refer to our full <b><a href="assets/SOP%2025-03-2025%20EC-6.pdf"> Standard of Procedures</a></b>  on our website for complete details.</p>
             </div>
         </div>
         <div class="faq-item">
